1.1.1 (01.02.2013):

* + support for tesseract 3.02.01
* Fixed tesseract 3.00 support
* Fixed bug sending PDF as email
  Closes bug 152 (No eMail gscan2pdf 1.1 Suse 12.2)
* Don't need to convert image to .bmp for cuneiform 1.1.0


1.1.0 (18.11.2012):

* Fix applying default settings to widgets in scanimage dialog
  Closes debian bug #682818 (Presets aren't working)
* Fixed bug editing OCR output.
* Add profiles to libsane-perl frontend
* Fixed switching to last directory on open/save
* Fixed extracting image resolution in non-English locales
  Closes bug 3572463 (After update suse 12.2 pdf blank page)
* Much refactorisation of code to allow more regression tests
  and reduce duplication
* Fixed bug importing multipage PDF
  Closes bug 3574898 (Always imports all pages of a PDF)
* Update to German translation (thanks to Jari)
* Update to Greek translation (thanks to Stavros Kakaliantis)
* Update to Gujarati translation (thanks to Vishal Goswami)
* Update to Occitan (post 1500) translation (thanks to Cédric VALMARY)
* Update to Turkish translation (thanks to Utku BERBEROĞLU)


1.0.6 (20.07.2012):

* Fixed cropping when selector tool not active or page not selected
  Closes bug 3544597 (crop tool not working)
* Fixed renumber dialog
  Closes bug 3545151 (renumber not working in version 1.0.5)
* Fixed keyboard entry in dialog boxes
  Closes Launchpad bug 1026944 (Unable to type text in Save dialog box)
* + support for unpaper > 0.3
  Closes bug 3542615 (Incompatibility with recent releases of unpaper)
* Repage after crop
  Closes bug 3526661 (cropping page twice: coordinates off)


1.0.5 (15.07.2012):

* Allow new processes to be started after pressing cancel button
* Fixed paste menu
  Closes bug 3517797 (Copy and paste no longer work)
* Pad scans which have less data than their headers announce with blanks
  Closes bug 3480247 (No image from HP6500A ADF)
* Fix unpaper when used as part of scan process
  Closes Debian bug #670640 (Can't call method get_cmdline)